lab_assignmen day 1 ans assignment 1 added

--- a/css/style_&_attributes.html
+++ b/css/style_&_attributes.html
@@ -18,7 +18,10 @@
             color:#ff1200;/*use of hex colorcode*/
         }
         body{
-            background-image: url("images/texture.jpg");
+            background-image: url("images/texture.jpg") ;
+            background-repeat: no-repeat;
+            background-size: cover;
+           
         }
         </style>
     </head>
