some code not working

--- a/Lab Assignment/day1/surveyform.html
+++ b/Lab Assignment/day1/surveyform.html
@@ -114,7 +114,7 @@
             radiovar="V";
            
         }
-
+/*below code not working*/
         var content1="<table><tr><th>Name</th><th>Email</th><th>Age</th><th>Improved_In_Futute</th></tr><tr><td>"+varname+"</td><td>"+varemail+"</td><td>"+varage+"</td><td>"+radiovar+"</td></tr></table>";
         var abc=document.getElementById("div2").innerHTML;
         abc.innerHTML=content1;
